# Project-WinSvalinn

./: .gitignore  LICENSE  LICENSING.md  README.md  index.html  privacy.html  pyproject.toml  requirements.txt  run_sidecar.py
.github/workflows/: ci.yml  release.yml  sign.yml
docs/: SIGNING.md  TECHNICAL.md  architecture.md  contributing.md  plugin-development.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/scripts/: shots.mjs
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: CommandPalette.tsx  MetricBar.tsx  OptionsSection.tsx  ProBadge.tsx  ScoreRing.tsx  SeverityBadge.tsx  Sidebar.tsx  StatCard.tsx  Titlebar.tsx  TopBar.tsx
frontend/src/lib/: api.ts  cache.ts  edition.test.ts  edition.ts  i18n.tsx  nav.ts  open.ts  severity.ts
frontend/src/views/: Cleanup.tsx  Dashboard.tsx  Gaming.tsx  Memory.tsx  Network.tsx  Optimization.tsx  Placeholder.tsx  ProUpsell.tsx  Processes.tsx  Settings.tsx
src-tauri/: .gitignore  Cargo.toml  installer-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/sidecar/: __init__.py  __main__.py  app.py
src/sidecar/options/: __init__.py  opt_gaming.py  opt_privacy.py  opt_tweaks.py
src/sidecar/routes/: __init__.py
src/winsvalinn/: __init__.py  cli.py  config.py  scoring.py
src/winsvalinn/assets/: __init__.py  logo_generator.py
src/winsvalinn/assets/cis/: windows10_L1_subset.yaml
src/winsvalinn/core/: __init__.py  admin.py  ai_windows.py  autoruns.py  backup_assistant.py  bandwidth_monitor.py  bloatware_remover.py  boot_timeline.py  browser_cleanup.py  change_log.py  cis_mapping.py  defender_control.py  dev_tools.py  disk_health.py  dns_manager.py  driver_manager.py  dry_run.py  duplicate_finder.py  environment_manager.py  features_manager.py  firewall_manager.py  game_library.py  game_optimizer.py  gpu.py  hardware_info.py  hosts_manager.py  licensing.py  network_diagnostics.py  network_scanner.py  oosu_bridge.py  optimization.py  optimization_groups.py  optimization_score.py  package_manager.py  privacy_cleaner.py  process_tree.py  ram.py  registry_backup.py  restore_point.py  safe_change.py  (+8 more)
src/winsvalinn/i18n/: __init__.py  strings.py
src/winsvalinn/utils/: __init__.py  logger.py  registry_helper.py  scan_cache.py  validation.py
tests/: conftest.py  gaming_options_test.py  privacy_options_test.py  test_ai_windows.py  test_cli.py  test_core_imports.py  test_core_modules.py  test_game_library.py  test_licensing.py  test_optimization_score.py  test_security_module.py  test_sidecar.py  test_stress.py  tweaks_options_test.py
