[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "winsvalinn-sidecar"
version = "1.0.1"
description = "Python FastAPI sidecar for the WinSvalinn Tauri app"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Javier Maroto", email = "javidominguez060@gmail.com" },
]
keywords = ["windows", "security", "optimization", "tauri", "sidecar"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0",
    "psutil>=5.9.0",
    "pillow>=10.0.0",
    "PyYAML>=6.0",
    "cryptography>=42.0",
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "pyinstaller>=6.0",
    # Required by Starlette/FastAPI TestClient. Newer Starlette (>=1.3) pulls the
    # httpx2 client; older releases use httpx. Declare both so a fresh CI install
    # has whichever the resolved Starlette needs.
    "httpx",
    "httpx2",
]

[project.scripts]
winsvalinn = "winsvalinn.cli:app"
winsvalinn-sidecar = "sidecar.__main__:main"

[project.urls]
Homepage = "https://github.com/jv-maroto/WinSvalinn"
Repository = "https://github.com/jv-maroto/WinSvalinn"
Issues = "https://github.com/jv-maroto/WinSvalinn/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/winsvalinn", "src/sidecar"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
# Correctness-focused baseline (pyflakes + pycodestyle + import sort + pyupgrade).
# Stylistic groups (N, B, C4, SIM) were dropped to keep CI green on the legacy
# core without mass rewrites; re-enable them incrementally as modules modernize.
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]
