[package]
name = "winsvalinn"
version = "1.0.2"
description = "WinSvalinn — system security & optimization for Windows"
authors = ["Javier Maroto"]
license = "MIT"
edition = "2021"

[lib]
name = "winsvalinn_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-window-state = "2.4.1"
tauri-plugin-shell = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
